# pylookup

./: .gitignore  README.md  pyproject.toml  test.py  writeup.md
common_util/: curve.py  ellipticcurve.py  ellipticcurve_test.py  fk20_multi.py  fk20_single.py  kzg.py  poly.py
common_util/polycommit/: kzg.py
common_util/test/: fk20_single_test.py
src/baloo/: README.md  cq.ipynb  fk.py  prover.py  setup.py  transcript.py  verifier.py
src/baloo/test/: fft_test.py  poly_test.py  test.py
src/caulk/: KZG10.py  caulk_setup.py  prover.py  setup.py  util.py  verifier.py
src/caulk/multiple/: caulk_multiple_prover.py  caulk_multiple_setup.py  caulk_multiple_transcript.py  caulk_multiple_verifier.py  cault_multiple_test.py
src/caulk/single/: caulk_single_prover.py  caulk_single_setup.py  caulk_single_verifier.py
src/common_util/: curve.py  curve_optimized.py  fft.py  fk.py  fk20_single.py  fk20_single_test.py  gkr.py  kzg.py  kzg_optimized.py  kzg_test.py  lagrange.py  lagrange_test.py  mle.py  mle_poly.py  poly.py  poly_optimized.py  sumcheck.py  transcript.py  transcript_optimized.py  univariatesumcheck.py  univariatesumcheck_test.py  util.py
src/cq/: cq.ipynb  cq_test.py  fk.py  precompute.py  program.py  prover.py  setup.py  test.py  transcript.py  verifier.py
src/lasso/: Introduction.md  README.md  program.py  prover.py  setup.py  test.py  transcript.py  verifier.py
src/logupgkr/: fractional_gkr.py  transcript.py  writeup.md
src/plookup/: Introduction.md  README.md  program.py  prover.py  setup.py  test.py  transcript.py  verifier.py
(+15 files in other folders)
