[tool.poetry]
name = "pylookup"
version = "0.1.0"
description = ""
authors = ["nooma <suncloud2203357667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-ecc = "^6.0.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
